Fix table alignment

--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -78,6 +78,7 @@ div.team-table span {
     padding: 2px 10px;
     border-bottom: 1px solid #ffffff50;
     border-right: 1px solid #ffffff50;
+    align-items: center;
 }
 div.team-table span:nth-child(-n+4){
     border-top: 2px solid #ffffff50;
